--- a/index.html
+++ b/index.html
@@ -7,24 +7,36 @@
   <link rel="apple-touch-icon" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- SEO Meta Tags -->
+  <!-- Primary SEO Meta Tags -->
   <title>Rojadirecta En Vivo - Ver Fútbol y Deportes Online Gratis HD</title>
+  <meta name="title" content="Rojadirecta En Vivo - Ver Fútbol y Deportes Online Gratis HD" />
   <meta name="description"
-    content="Ver deportes en vivo online gratis en Rojadirecta En Vivo. Fútbol en directo, NBA, Fórmula 1, Tenis, UFC y más eventos deportivos en streaming HD. La mejor calidad sin cortes." />
+    content="Ver deportes en vivo online gratis en Rojadirecta En Vivo. Fútbol en directo, NBA, Fórmula 1, Tenis, UFC y más eventos deportivos en streaming HD. La mejor calidad sin cortes. Roja Directa partidos de hoy." />
   <meta name="keywords"
-    content="rojadirecta, rojadirecta en vivo, roja directa, ver futbol online, deportes en vivo gratis, nba online, f1 online, futbol gratis, rojadirecta tv, rojadirecta futbol en vivo, la roja directa en vivo, rojadirecta online gratis futbol, rojadirectaenvivo, roja directa en vivo ahora, ver deportes en vivo" />
-  <meta name="robots" content="index, follow" />
+    content="rojadirecta, rojadirecta en vivo, roja directa, ver futbol online, rojadirecta tv, deportes en vivo gratis, futbol en vivo gratis, nba online, f1 online, rojadirecta futbol en vivo, roja directa en vivo ahora, rojadirecta partidos gratis en vivo, la roja directa en vivo, rojadirecta online gratis futbol, ver futbol online gratis, rojadirecta tv en vivo, rojadirecta tv directo, rojadirecta ver online, roja directa en vivo futbol, rojadirecta vivo, rojadirectaonline, rojadirecta en vivo gratis, rojadirecta tv online gratis, roja directa en espanol en vivo, rojadirecta gratis, rojadirecta tv online, rojadirecta en vivo futbol, rojadirecta en vivo ahora, roja directa en vivo futbol gratis, rojadirectaenvivo, rojadirecta live, rojacalcioenvivo, roja directa futbol en vivo, rojadirecta gratis partidos en vivo, rojadirecta tv directo gratis online, rojadirecta ver partidos en vivo, rojadirecta en vivo espanol, rojadirectatv futbol en vivo, rojadirectatvonline, rojadirectaenvivopuntopl, rojadirecta tv en vivo gratis, rojadirecta en vivo hoy, rojadirecta espn en vivo, rojadirecta en vivo online gratis, rojadirecta español, rojaiecta en vivo futbol gratis, rojadirecta futbol en vivo gratis en directo, roja directa futbol en vivo gratis online, projadirecta, rojaecta en vivorats" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
   <meta name="author" content="Rojadirectaenvivo.live" />
+  <meta name="language" content="Spanish" />
+  <meta name="revisit-after" content="1 days" />
+  <meta name="distribution" content="global" />
+  <meta name="rating" content="general" />
   <link rel="canonical" href="https://rojadirectaenvivo.live" />
+
+  <!-- Hreflang for Spanish -->
+  <link rel="alternate" hreflang="es" href="https://rojadirectaenvivo.live" />
+  <link rel="alternate" hreflang="x-default" href="https://rojadirectaenvivo.live" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://rojadirectaenvivo.live/" />
   <meta property="og:title" content="Rojadirecta En Vivo - Ver Fútbol y Deportes Online Gratis HD" />
   <meta property="og:description"
-    content="Ver deportes en vivo online gratis. Fútbol, NBA, F1, Tenis, UFC y más en streaming HD." />
+    content="Ver deportes en vivo online gratis. Fútbol, NBA, F1, Tenis, UFC y más en streaming HD. Roja Directa partidos gratis." />
   <meta property="og:image" content="https://rojadirectaenvivo.live/logo.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:locale" content="es_ES" />
+  <meta property="og:site_name" content="Rojadirecta En Vivo" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -34,9 +46,72 @@
     content="Ver deportes en vivo online gratis. Fútbol, NBA, F1, Tenis, UFC y más en streaming HD." />
   <meta name="twitter:image" content="https://rojadirectaenvivo.live/logo.png" />
 
-  <!-- Theme -->
+  <!-- Theme & Mobile -->
   <meta name="theme-color" content="#0D0D0D" />
   <meta name="msapplication-TileColor" content="#0D0D0D" />
+  <meta name="msapplication-TileImage" content="/logo.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Rojadirecta" />
+
+  <!-- Verification -->
+  <meta name="msvalidate.01" content="YOUR_BING_VERIFICATION_CODE" />
+  <meta name="yandex-verification" content="YOUR_YANDEX_CODE" />
+
+  <!-- JSON-LD Structured Data - WebSite -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Rojadirecta En Vivo",
+      "alternateName": ["Roja Directa", "Rojadirecta TV", "Rojadirecta Online"],
+      "url": "https://rojadirectaenvivo.live",
+      "description": "Ver deportes en vivo online gratis. Fútbol, NBA, F1 y más en streaming HD.",
+      "inLanguage": "es",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://rojadirectaenvivo.live/?search={search_term_string}"
+        },
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
+  <!-- JSON-LD Structured Data - Organization -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Rojadirecta En Vivo",
+      "url": "https://rojadirectaenvivo.live",
+      "logo": "https://rojadirectaenvivo.live/logo.png",
+      "sameAs": []
+    }
+    </script>
+
+  <!-- JSON-LD Structured Data - SportsEvent Collection -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CollectionPage",
+      "name": "Partidos en Vivo - Rojadirecta En Vivo",
+      "description": "Colección de eventos deportivos en vivo incluyendo fútbol, baloncesto, tenis y más",
+      "url": "https://rojadirectaenvivo.live",
+      "inLanguage": "es",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "Rojadirecta En Vivo",
+        "url": "https://rojadirectaenvivo.live"
+      }
+    }
+    </script>
+
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="dns-prefetch" href="https://raw.githubusercontent.com" />
 </head>
 
 <body>
